# TakoLib

./: LICENSE  README.md  setup.cfg  setup.py
src/greets/: __init__.py  hello.py
takolib/: hello.py
