[metadata]
name = takolib
version = 0.0.1
author = Takoyaki (Nikhil Pandey)
author_email = np768@scarletmail.rutgers.edu
description = Currently for testing purposes
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/Tqkoyaki/TakoLib
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True